Fix #13 z-index issue in illustrations

--- a/_sass/components/illustration.scss
+++ b/_sass/components/illustration.scss
@@ -12,7 +12,7 @@
     bottom: $margin;
     right: $margin;
     opacity: 0.1;
-    z-index: 0;
+    z-index: -1;
 
     @media (orientation: landscape) {
       height: calc(62vh);
